deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
  labels:
    app: test-service
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
        - name: test-service
          ports:
            - containerPort: 9090
          imagePullPolicy:  Always
          image: asia.gcr.io/tokyo-eye-313109/test-service:0.1.0
        - image: postgres:13.0
          imagePullPolicy: ""
          name: db-test-service
        - image: redis:6.0
          imagePullPolicy: ""
          name: test-service-redis
  selector:
    matchLabels:
      app: test-service
