deployment/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-loadbalancer-service
  labels:
    app: test-loadbalancer-service
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app: test-service
  sessionAffinity: None
