deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test-service
  annotations:
    kubernetes.io/ingress.global-static-ip-name: address-test-service
    networking.gke.io/managed-certificates: certificate-name
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: test-loadbalancer-service
    servicePort: 9090
